fixes for right aligned text and centred headings

--- a/Stylesheets/profiles/agora/html/tei-agora.css
+++ b/Stylesheets/profiles/agora/html/tei-agora.css
@@ -163,7 +163,14 @@ h1 {
    font-weight: bold;
    font-size: 2em;
    line-height: 34pt;
+  }
+h1.center {
+   font-weight: bold;
+   font-size: 2em;
+   line-height: 34pt;
+   text-align : center;
 }
+
 
 h2 {
    font-size: larger;
@@ -171,12 +178,27 @@ h2 {
    margin-top: 18pt;
    font-weight: bold;
 }
+h2.center {
+   font-size: larger;
+   line-height: 20pt;
+   margin-top: 18pt;
+   font-weight: bold;
+   text-align : center;
+
+}
 
 h3 {
    font-size: larger;
    line-height: 18pt;
    font-weight: bold;
    font-style: italic;
+}
+h3.center {
+   font-size: larger;
+   line-height: 18pt;
+   font-weight: bold;
+   font-style: italic;
+   text-align : center;
 }
 
 
@@ -1052,6 +1074,19 @@ span.numberParagraph {
     font-size: smaller;
     color: grey;
 }
+
+span.centre {
+    display: block;
+   text-align:center;
+}
+
+p.centre {
+    display: block;
+   text-align:center;
+}
+
+
 .centre .center{
+    display: block;
    text-align:center;
 }
